...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chadlohrli.myapplication.SongProgressFragment"
    tools:layout_editor_absoluteY="81dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/carrot"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:text="\u2303"
            android:textColor="@android:color/white"
            android:textSize="25dp"
...
